Hive Change Log

Trunk -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-1304. Add function row_sequence in contrib (John Sichi via namit)

    HIVE-1405. Add ability to run an initialization script by 'hive -i <fileName>' (John Sichi via namit)

    HIVE-1387. Add PERCENTILE_APPROX which works with double data type
    (Mayank Lahiri via jvs)

  IMPROVEMENTS

    HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
    operation (Ning Zhang via namit)

    HIVE-1430. Dont run serialize plan by default (Ning Zhang via namit)

    HIVE-1443. Add an API to turn off bucketing (Paul Yang via namit)

    HIVE-1447. Speed up reflection method calls (Zheng via He Yongqiang)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1440. Bug in RCFiles with local work (map-join or sort-merge join)
    (He Yongqiang via namit)

    HIVE-1454. insert overwrite and CTAS fail in hive local mode
    (Joydeep Sen Sarma via He Yongqiang )

    HIVE-1305. add progress in join and groupby
    (Siying Dong via He Yongqiang)

    HIVE-1453. Make Eclipse launch tempaltes auto-adjust to Hive
    version number changes.
    (Arvind Prabhakar via jvs)

Release 0.6.0 -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-964. Handle skew join
    (Yongqiang He via namit)

    HIVE-972. Support views. (John Sichi via zshao)

    HIVE-1172. Add UDFS to create struct (Zheng Shao via Ning Zhang)

    HIVE-894. add udaf max_n, min_n to contrib (Zheng Shao via Yongqiang He)

    HIVE-1152. Add metastore API method to drop/append partition by name.
    (Paul Yang via zshao)

    HIVE-1147. Update Eclipse project configuration to match Checkstyle
    (Carl Steinbach via zshao)

    HIVE-1117. Make queryPlan serializable
    (Zheng Shao via namit)

    HIVE-917. Bucketed Map Join
    (He Yongqiang via namit)

    HIVE-1178. enforce bucketing for a table.
    (Namit Jain via He Yongqiang)

    HIVE-1188. NPE when TestJdbcDriver/TestHiveServer