@@ -107,6 +107,7 @@ round
 rpad
 rtrim
 second
+sentences
 sign
 sin
 size
