@@ -1,0 +1,222 @@
+PREHOOK: query: CREATE TABLE sent_tmp (val array<string>)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE sent_tmp (val array<string>)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@sent_tmp
+PREHOOK: query: CREATE TABLE sent_tmp2 (val string)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE sent_tmp2 (val string)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@sent_tmp2
+PREHOOK: query: INSERT OVERWRITE TABLE sent_tmp
+SELECT explode(sentences(unhex("486976652065737420756E20657863656C6C656E74206F7574696C20706F7572206C65732072657175C3AA74657320646520646F6E6EC3A965732C20657420706575742DC3AA74726520706C757320706F6C7976616C656E7420717565206C612074726164756374696F6E206175746F6D61746971756521206C6120706F6E6374756174696F6E206D756C7469706C65732C206465732070687261736573206D616C20666F726DC3A96573202E2E2E20636F6E667573696F6E202D20657420706F757274616E742063652055444620666F6E6374696F6E6E6520656E636F72652121"), "fr")) AS val FROM src LIMIT 3
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: default@sent_tmp
+POSTHOOK: query: INSERT OVERWRITE TABLE sent_tmp
+SELECT explode(sentences(unhex("486976652065737420756E20657863656C6C656E74206F7574696C20706F7572206C65732072657175C3AA74657320646520646F6E6EC3A965732C20657420706575742DC3AA74726520706C757320706F6C7976616C656E7420717565206C612074726164756374696F6E206175746F6D61746971756521206C6120706F6E6374756174696F6E206D756C7469706C65732C206465732070687261736573206D616C20666F726DC3A96573202E2E2E20636F6E667573696F6E202D20657420706F757274616E742063652055444620666F6E6374696F6E6E6520656E636F72652121"), "fr")) AS val FROM src LIMIT 3
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: default@sent_tmp
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+PREHOOK: query: INSERT OVERWRITE TABLE sent_tmp2
+SELECT explode(val) AS val FROM sent_tmp
+PREHOOK: type: QUERY
+PREHOOK: Input: default@sent_tmp
+PREHOOK: Output: default@sent_tmp2
+POSTHOOK: query: INSERT OVERWRITE TABLE sent_tmp2
+SELECT explode(val) AS val FROM sent_tmp
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@sent_tmp
+POSTHOOK: Output: default@sent_tmp2
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: SELECT hex(val) FROM sent_tmp2
+PREHOOK: type: QUERY
+PREHOOK: Input: default@sent_tmp2
+PREHOOK: Output: file:/var/folders/7i/7iCDbWRkGHOcgJgX0zscimPXXts/-Tmp-/mlahiri/hive_2010-07-12_14-58-19_526_2637797515524714813/10000
+POSTHOOK: query: SELECT hex(val) FROM sent_tmp2
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@sent_tmp2
+POSTHOOK: Output: file:/var/folders/7i/7iCDbWRkGHOcgJgX0zscimPXXts/-Tmp-/mlahiri/hive_2010-07-12_14-58-19_526_2637797515524714813/10000
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+48697665
+657374
+756E
+657863656C6C656E74
+6F7574696C
+706F7572
+6C6573
+72657175C3AA746573
+6465
+646F6E6EC3A96573
+6574
+706575742DC3AA747265
+706C7573
+706F6C7976616C656E74
+717565
+6C61
+74726164756374696F6E
+6175746F6D617469717565
+6C61
+706F6E6374756174696F6E
+6D756C7469706C6573
+646573
+70687261736573
+6D616C
+666F726DC3A96573
+636F6E667573696F6E
+6574
+706F757274616E74
+6365
+554446
+666F6E6374696F6E6E65
+656E636F7265
+48697665
+657374
+756E
+657863656C6C656E74
+6F7574696C
+706F7572
+6C6573
+72657175C3AA746573
+6465
+646F6E6EC3A96573
+6574
+706575742DC3AA747265
+706C7573
+706F6C7976616C656E74
+717565
+6C61
+74726164756374696F6E
+6175746F6D617469717565
+PREHOOK: query: DROP TABLE sent_tmp
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE sent_tmp
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@sent_tmp
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: DROP TABLE sent_tmp2
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE sent_tmp2
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@sent_tmp2
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: CREATE TABLE sent_tmp (val array<string>)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE sent_tmp (val array<string>)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@sent_tmp
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: CREATE TABLE sent_tmp2 (val string)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE sent_tmp2 (val string)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@sent_tmp2
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: INSERT OVERWRITE TABLE sent_tmp
+SELECT explode(sentences(unhex("48697665206973742065696E2061757367657A656963686E65746573205765726B7A6575672066C3BC7220646965204162667261676520766F6E20446174656E2C20756E64207669656C6C6569636874207669656C736569746967657220616C7320646965206D61736368696E656C6C6520C39C6265727365747A756E6721204D756C7469706C652C207363686C6563687420676562696C646574656E2053C3A4747A65202E2E2E205665727765636873656C756E6720496E74657270756E6B74696F6E202D20756E6420646F636820697374206469657365205544462066756E6B74696F6E6965727420696D6D6572206E6F63682121"), "de")) AS val FROM src LIMIT 3
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: default@sent_tmp
+POSTHOOK: query: INSERT OVERWRITE TABLE sent_tmp
+SELECT explode(sentences(unhex("48697665206973742065696E2061757367657A656963686E65746573205765726B7A6575672066C3BC7220646965204162667261676520766F6E20446174656E2C20756E64207669656C6C6569636874207669656C736569746967657220616C7320646965206D61736368696E656C6C6520C39C6265727365747A756E6721204D756C7469706C652C207363686C6563687420676562696C646574656E2053C3A4747A65202E2E2E205665727765636873656C756E6720496E74657270756E6B74696F6E202D20756E6420646F636820697374206469657365205544462066756E6B74696F6E6965727420696D6D6572206E6F63682121"), "de")) AS val FROM src LIMIT 3
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: default@sent_tmp
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: INSERT OVERWRITE TABLE sent_tmp2
+SELECT explode(val) AS val FROM sent_tmp
+PREHOOK: type: QUERY
+PREHOOK: Input: default@sent_tmp
+PREHOOK: Output: default@sent_tmp2
+POSTHOOK: query: INSERT OVERWRITE TABLE sent_tmp2
+SELECT explode(val) AS val FROM sent_tmp
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@sent_tmp
+POSTHOOK: Output: default@sent_tmp2
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: SELECT hex(val) FROM sent_tmp2
+PREHOOK: type: QUERY
+PREHOOK: Input: default@sent_tmp2
+PREHOOK: Output: file:/var/folders/7i/7iCDbWRkGHOcgJgX0zscimPXXts/-Tmp-/mlahiri/hive_2010-07-12_14-58-31_739_6627979306575702865/10000
+POSTHOOK: query: SELECT hex(val) FROM sent_tmp2
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@sent_tmp2
+POSTHOOK: Output: file:/var/folders/7i/7iCDbWRkGHOcgJgX0zscimPXXts/-Tmp-/mlahiri/hive_2010-07-12_14-58-31_739_6627979306575702865/10000
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+48697665
+697374
+65696E
+61757367657A656963686E65746573
+5765726B7A657567
+66C3BC72
+646965
+41626672616765
+766F6E
+446174656E
+756E64
+7669656C6C6569636874
+7669656C7365697469676572
+616C73
+646965
+6D61736368696E656C6C65
+C39C6265727365747A756E67
+4D756C7469706C65
+7363686C65636874
+676562696C646574656E
+53C3A4747A65
+5665727765636873656C756E67
+496E74657270756E6B74696F6E
+756E64
+646F6368
+697374
+6469657365
+554446
+66756E6B74696F6E69657274
+696D6D6572
+6E6F6368
+PREHOOK: query: DROP TABLE sent_tmp
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE sent_tmp
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@sent_tmp
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: DROP TABLE sent_tmp2
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE sent_tmp2
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@sent_tmp2
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+PREHOOK: query: SELECT sentences("Hive is an excellent tool for data querying; and perhaps more versatile than machine translation!! Multiple, ill-formed sentences...confounding punctuation--and yet this UDF still works!!!!") FROM src LIMIT 1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/var/folders/7i/7iCDbWRkGHOcgJgX0zscimPXXts/-Tmp-/mlahiri/hive_2010-07-12_14-58-35_364_8686350823159923121/10000
+POSTHOOK: query: SELECT sentences("Hive is an excellent tool for data querying; and perhaps more versatile than machine translation!! Multiple, ill-formed sentences...confounding punctuation--and yet this UDF still works!!!!") FROM src LIMIT 1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/var/folders/7i/7iCDbWRkGHOcgJgX0zscimPXXts/-Tmp-/mlahiri/hive_2010-07-12_14-58-35_364_8686350823159923121/10000
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp.val SCRIPT []
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+POSTHOOK: Lineage: sent_tmp2.val SCRIPT [(sent_tmp)sent_tmp.FieldSchema(name:val, type:array<string>, comment:null), ]
+[["Hive","is","an","excellent","tool","for","data","querying","and","perhaps","more","versatile","than","machine","translation"],["Multiple","ill-formed","sentences","confounding","punctuation","and","yet","this","UDF","still","works"]]
